[package]
name = "yaslapi-sys"
version = "0.2.4"
edition = "2021"
authors = ["Ryan Andersen <ryco117@gmail.com>", "Thiabaud Engelbrecht"]
description = "A library that provides bindings to the Yet Another Scripting Language (YASL) API."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.68.1"
cmake = "0.1.50"

[dependencies]
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"

[profile.release]
lto = true
strip = true
panic = "abort"
