[package]
name = "yaslapi-sys"
version = "0.2.5"
edition = "2021"
authors = ["Ryan Andersen <ryco117@gmail.com>", "Thiabaud Engelbrecht"]
description = "A library that provides bindings to the Yet Another Scripting Language (YASL) API."
license = "MIT"
repository = "https://github.com/ryco117/yaslapi-sys"

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.50"

[profile.release]
lto = true
strip = true
panic = "abort"
